# ecommerce-project

./: README.md  docker-compose.yml
order-service/: .dockerignore  .env  Cargo.toml  Dockerfile
order-service/src/: config.rs  lib.rs  main.rs
order-service/src/db/: mod.rs
order-service/src/errors/: mod.rs
order-service/src/handlers/: mod.rs
order-service/src/models/: mod.rs
order-service/src/routes/: mod.rs
product-catalog-service/: Cargo.toml
